[tool.coverage.run]
branch = true
source = [ "twitter_contribution" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../../coverage/apps/jobs/twitter-contribution/html' --cov-report xml:'../../../coverage/apps/jobs/twitter-contribution/coverage.xml' --junitxml='../../../reports/apps/jobs/twitter-contribution/unittests/junit.xml' --html='../../../reports/apps/jobs/twitter-contribution/unittests/html/index.html'"

[tool.poetry]
name = "govrn-monorepo"
version = "1.0.0"
description = "Twitter contribution staging job"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "twitter_contribution"

  [tool.poetry.dependencies]
  python = ">=3.9,<3.11"
  JSON-log-formatter = "0.5.2"
  gql = "3.3.0"
  python-dotenv = "^1.0.0"
  aiohttp = "^3.8.4"

  [tool.poetry.dev-dependencies]
  pytest = "^7.3.1"
  pytest-cov = "^4.1.0"
  pytest-html = "^3.2.0"
  pytest-asyncio = "^0.16.0"
  pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
